# news-graph-alpha

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  HELP.md  README.md  pom.xml
backend/samples/: article-01-bbc-us-iran-peace-talks.json  article-02-nbc-iran-war-talks.json  article-03-npr-iran-rejects-proposal.json  article-04-reuters-eu-green-industrial-plan.json  article-05-ap-taiwan-tsmc-us-export-controls.json  article-06-guardian-nato-warsaw-summit-ukraine.json  article-07-ft-arctic-shipping-norway-russia.json  article-upload.example.json
backend/src/main/resources/: application-docker.yml  (+2 more)
extractor/: .gitignore  Dockerfile  README.md  pyproject.toml
extractor/scripts/: gen_grpc.sh
extractor/src/newsgraph/: cli.py  config.py  grpc_server.py  logging_setup.py  models.py  pipeline.py  schema.py
extractor/src/newsgraph/extraction/: llm_extractor.py  preprocessing.py  prompts.py
extractor/src/newsgraph/linking/: embeddings.py  entity_linker.py  lucene_search.py  vector_search.py
extractor/src/newsgraph/storage/: neo4j_client.py
extractor/tests/: test_entity_linking.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Graph.tsx  GraphNodeMesh.tsx  GraphRenderLayers.tsx  graphTheme.ts  index.css  reagraphTheme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnalysisMeta.tsx
frontend/src/hooks/: useAnalyses.ts
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx
frontend/src/utils/: graphFilter.ts  search.ts
proto/: extractor.proto
scripts/: neo4j-init.cypher  remediate-split-entity.cypher  sync-proto.sh
(+39 files in other folders)
