[project]
name = "newsgraph"
version = "0.1.0"
description = "Knowledge graph PoC for Polish news articles"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "neo4j>=5.26.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "click>=8.1",  # spaCy's __init__ imports spacy.cli -> typer -> click; pin it so it's always present
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "instructor>=1.3",
    "openai>=1.40",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "rapidfuzz>=3.9",
    "spacy>=3.8,<3.9",
    "thinc>=8.3,<8.4",
    "pl-core-news-lg",
    "tenacity>=8.5",
    "tqdm>=4.66",
    "numpy>=2.0,<2.3",
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "grpcio-health-checking>=1.66",
]

[project.scripts]
newsgraph = "newsgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsgraph"]

# CPU-only torch to avoid the ~750 MB CUDA wheel on machines without a GPU.
# The PoC runs MMLW (sentence-transformers) inference on CPU just fine —
# embedding a single canonical name is ~1–2 s on modern CPUs, which is
# dominated by the LLM latency anyway.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
pl-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cpu" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ipython>=8.25",
]
